[workspace]
resolver = "3"
members = ["common", "marshalconv", "rpgtool"]

[workspace.dependencies]
alox-48 = "0.6"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12.0"
serde_yaml_ng = "0.10.0"

common = { version = "*", path = "./common" }

thiserror = "2.0"
