[workspace]
resolver = "3"
members = ["common", "marshalconv", "rpgtool"]

[workspace.package]
readme = "README.md"
authors = ["melody-rs <melody@melody-is.gay>"]
license = "MPL-2.0"
repository = "https://github.com/melody-rs/rpgtool"
keywords = ["cli", "ruby", "rpg", "marshal"]
categories = ["command-line-utilities"]
edition = "2024"

[workspace.dependencies]
alox-48 = "0.6"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12.0"
serde-saphyr = { version = "0.0.11", git = "https://github.com/bourumir-wyngs/serde-saphyr" }

rpgtool-common = { version = "0.1.2", path = "./common" }

thiserror = "2.0"
