[package]
name = "rpgtool-common"
version = "0.1.0"
description = "Common crate for rpgtool and marshalconv"

readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true


[dependencies]
alox-48.workspace = true
clap.workspace = true

serde.workspace = true
serde_json.workspace = true
ron.workspace = true
serde_yaml_ng.workspace = true

thiserror.workspace = true
