[package]
name = "marshalconv"
version = "0.1.0"
description = "Utility tool for working with Ruby marshal data"

readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true


[dependencies]
clap.workspace = true
alox-48.workspace = true

serde.workspace = true
serde_json.workspace = true
ron.workspace = true
serde_yaml_ng.workspace = true

rpgtool-common.workspace = true
