[package]
name = "marshalconv"
version = "0.2.0"
description = "Utility tool for working with Ruby marshal data"

readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true


[dependencies]
clap.workspace = true
rpgtool-common.workspace = true
