[package]
name = "rpgtool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
alox-48.workspace = true

serde.workspace = true
serde_json.workspace = true
ron.workspace = true
serde_yaml_ng.workspace = true

rpgtool-common.workspace = true

indicatif = "0.18.3"
flate2 = "1.1.5"
