[package]
name = "rpgtool"
version = "0.1.1"
description = "Utility tool for working with RPG Maker projects"

readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
alox-48.workspace = true

serde.workspace = true
serde_json.workspace = true
ron.workspace = true
serde_yaml_ng.workspace = true

rpgtool-common.workspace = true

indicatif = "0.18.3"
flate2 = "1.1.5"
