[package]
name = "rpgtool"
version = "0.2.0"
description = "Utility tool for working with RPG Maker projects"

readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true

alox-48.workspace = true
serde.workspace = true

rpgtool-common.workspace = true

indicatif = "0.18.3"
flate2 = "1.1.5"

bytemuck = { version = "1.24.0", features = ["derive", "extern_crate_alloc"] }
num_enum = "0.7.0"

rayon = "1.11.0"
